...

  return (
    <Pressable onPress={handlePress} style={s.searchBar}>
      <SText variant="body" style={s.searchIcon}>⌕</SText>
      <TextInput
        ref={inputRef}
        accessibilityLabel="공구 검색"
        placeholder="브랜드명, 제품명으로 검색해보세요"
        placeholderTextColor={colors.textTertiary}
        value={value}
        onChangeText={onChangeText}
        style={s.searchInput}
        showSoftInputOnFocus={true}
...
